@@ -1,3 +1,7 @@
+== Next version
+
+* Variables that should be accessible from outside the model can now easily be created by calling "variable_name_is_a variable" where "variable_name" is the desired name of the variable and "variable" is the variable (e.g. "int_var(17)"). Take a look at the examples to see it in action.
+
 == Version 0.8.3 
 This release adds regular expression constraints, the last channel
 constraint and various minor convenience improvements. It also fixes a
